--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid nav-content nav-content" style="background-color: aqua;">
+        <div class="container-fluid nav-content nav-content">
             <div class="col-2 brand-content">
                 <a class="navbar-brand" href="home.html">
                     <img src="logo1-novo.png" alt="Logo SmoothFlow" width="55" height="55">
@@ -26,14 +26,56 @@
                 </form>
             </div>
             <div class="col-2">
-                Oi
+                
+            </div>
+    </nav>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-3">
+                <!-- Menu de Navegação Lateral -->
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" id="botao-cadastro" onclick="abrirCadastro()">Primary</a>
+                    <a href="#" class="list-group-item list-group-item-action">Social</a>
+                    <a href="#" class="list-group-item list-group-item-action">Promotions</a>
+                    <!-- Add more labels or folders as needed -->
+                </div>
+            </div>
+            <div class="col-md-9">
+                <!-- Lista de tarefas -->
+                <div class="list-group" id="item-tarefa">
+                    <!-- Item da lista de tarefas -->
+                    <a href="#" class="list-group-item list-group-item-action lista-de-tarefas">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Email Subject</h5>
+                            <small>3 hours ago</small>
+                        </div>
+                        <p class="mb-1">Short preview of the email content.</p>
+                    </a>
+                    <!-- Item da lista de tarefas -->
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Email Subject</h5>
+                            <small>3 hours ago</small>
+                        </div>
+                        <p class="mb-1">Short preview of the email content.</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </nav>
+    </div>
+      
 
+    <div class="telaCadastro" id="telaCadastro">
+        <div class="conteudo-cadastro">
+            <span class="close" onclick="fecharCadastro()">&times;</span>
+            <iframe src="cadastrarTarefa.html" width="100%" height="100%" frameborder="0"></iframe>
+        </div>
+    </div>
 
-
-
+    <script src="script/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
