--- a/home.html
+++ b/home.html
@@ -57,26 +57,50 @@
             </div>
             <div class="col-md-9">
                 <!-- Lista de tarefas -->
-                <div class="list-group" id="item-tarefa">
+                <ul class="list-group" id="item-tarefa">
                     <!-- Item da lista de tarefas -->
-                    <a href="#" class="list-group-item list-group-item-action lista-de-tarefas">
+                    <li class="list-group-item lista-de-tarefas">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">Tarefa agendada</h5>
                             <small>3 dias restantes</small>
                         </div>
-                        <p class="mb-1">Breve descrição da tarefa.</p>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <p class="mb-1">Breve descrição da tarefa.</p>
+                            <div class="botoes-controle">
+                                <button class="botao-deleta"><i class="bi bi-trash"></i></button>
+                                <button class="botao-atualiza"><i class="bi bi-pencil"></i></button>
+                                <button class="botao-concluir"><i class="bi bi-check-lg"></i></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item lista-de-tarefas">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">Tarefa agendada</h5>
                             <small>3 dias restantes</small>
                         </div>
-                        <p class="mb-1">Breve descrição da tarefa.</p>
-                    </a>
-                </div>
+                        <div class="d-flex w-100 justify-content-between">
+                            <p class="mb-1">Breve descrição da tarefa.</p>
+                            <div class="botoes-controle">
+                                <button class="botao-deleta"><i class="bi bi-trash"></i></button>
+                                <button class="botao-atualiza"><i class="bi bi-pencil"></i></button>
+                                <button class="botao-concluir"><i class="bi bi-check-lg"></i></button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>   
+    <!--iFrame da Tela de Cadastro-->
+    <div class="telaCadastro" id="telaCadastro">
+        <div class="conteudo-cadastro">
+            <span class="close" onclick="fecharCadastro()"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+            </svg></span>
+            <iframe src="cadastrarTarefa.html" width="100%" height="100%" frameborder="0"></iframe>
+        </div>
+    </div>    
     <!--Botão de menu mobile-->
     <div class="btn-group dropup" style="position: fixed; bottom: 10px; right: 10px;">
         <button class="btn dropdown-toggle d-md-none" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="botao-menu">
@@ -91,18 +115,24 @@
             <li><a class="dropdown-item" href="#">Tarefas cadastradas</a></li>
             <li><a class="dropdown-item" href="#">Perfil</a></li>
             <li><a class="dropdown-item" href="#">Configurações</a></li>
+            <li>
+                <div class="botao-temaEscuro">
+                    <input type="checkbox" class="checkbox" name="temaEscuro" id="temaEscuro">
+                    <label class="label-temaEscuro" for="temaEscuro">
+                        <i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#f1c40f" class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
+                            <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278"/>
+                            <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
+                          </svg></i>
+                          <i><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#f39c12" class="bi bi-sun-fill" viewBox="0 0 16 16">
+                            <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+                          </svg></i>
+                          <div class="ball"></div>
+                    </label>
+                </div>
+            </li>
         </ul>
     </div>
-    <!--iFrame da Tela de Cadastro-->
-    <div class="telaCadastro" id="telaCadastro">
-        <div class="conteudo-cadastro">
-            <span class="close" onclick="fecharCadastro()"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
-                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-              </svg></span>
-            <iframe src="cadastrarTarefa.html" width="100%" height="100%" frameborder="0"></iframe>
-        </div>
-    </div>    
+    
     <script src="script/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
