Organizando os arquivos do projeto

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         <div class="container-fluid nav-content nav-content">
             <div class="col-2 col-sm-2 brand-content">
                 <a class="navbar-brand" href="home.html">
-                    <img src="logo1-novo.png" alt="Logo SmoothFlow" width="55" height="55">
+                    <img src="./imgs/logo1-novo.png" alt="Logo SmoothFlow" width="55" height="55">
                 </a>
             </div>
             <div class="col-8  search-content">
